[package]
name = "cue-sdk"
description = "A high-level safe wrapper for the Corsair iCUE SDK v4."
version = "0.1.0"
authors = ["Scott Meschke <scottmeschke@gmail.com>"]
license = "MIT"
edition = "2021"
repository = "https://github.com/scottroemeschke/cue-sdk-rust"
keywords = ["led", "cue", "corsair", "icue", "rgb"]
categories = ["api-bindings"]

[dependencies]
cue-sdk-sys = { version = "0.1.0", path = "../cue-sdk-sys/cue-sdk-sys" }
thiserror = "2"
bitflags = "2"
tokio = { version = "1", optional = true, features = ["sync"] }

[dev-dependencies]
tokio = { version = "1", features = ["sync", "rt", "macros"] }

[features]
async = ["tokio"]
